Fixed cava + wal integration, adjusted wal minimum contrast

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -117,7 +117,7 @@
 
 #cava { 
     /* text-shadow: 1px 1px 3px black; */
-    animation: gradient 24s infinite;
+    animation: gradient 60s infinite;
     font-family: Hack Nerd Font;
 }
 
